Add BTS homepage index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<head> twice homepage</head>
-<div> twice Main Imege </div>
+<head> BTS homepage</head>
+<div> BTS Main Imege </div>
 <footer>JYP ent</footer>
 </html>
